Created and fixed test on the proyect
I have created and fixed the test on the project in order to cover the fix that i have make on the reservation form of creation.